# yttr

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gpt_context_dump.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 6036765fd28b_initial_migration.py  c136622d839e_add_user_table.py
app/: config.py  db.py  exceptions.py  file_utils.py  filter_utils.py  health.py  logic.py  main.py  models.py  utils.py
docs/: HOW_TO_FOLLOW.md  antifragile_python_backend_master_prompt_2026_v2_en.md  antifragile_python_backend_master_prompt_2026_v2_ru.md  postmortem.md
scripts/: setup.sh
tests/: dummy_ruff.py  test_alembic.py  test_app_config.py  test_config.py  test_dashboard.py  test_database_config.py  test_db.py  test_exception.py  test_file_utils.py  test_health.py  test_logic.py  test_models.py  test_parse_filter.py  test_security_config.py  test_simple_config.py  test_utils.py
