[project]
name = "ytter"
version = "0.1.0"
description = "Self skill-building project with unique methodology"
authors = [
    {name = "timanaimoff@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false